--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +12,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="15dp"
             android:paddingStart="15dp"
             android:text="Welcome"
             android:textColor="#000000"
@@ -24,7 +24,6 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:paddingStart="15dp"
             android:text="You can do it!"
             android:textColor="#000000"
@@ -33,25 +32,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <ImageView
-            android:id="@+id/iv_profile_dashboard"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="15dp"
-            android:src="@drawable/ic_circle_user_solid"
-            android:layout_gravity="right"/>
+    <ImageView
+        android:id="@+id/iv_profile_dashboard"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/ic_circle_user_solid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="15dp"
             android:background="@drawable/round_corner_date"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" >
 
             <TextView
                 android:id="@+id/tv_month"
@@ -65,42 +67,6 @@
                 android:text="Today"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <!--            <RadioGroup-->
-<!--                android:id="@+id/radio_weekandmonth"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="28dp"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent">-->
-
-<!--                <RadioButton-->
-<!--                    android:id="@+id/radio_week"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginHorizontal="2dp"-->
-<!--                    android:paddingHorizontal="12dp"-->
-<!--                    android:background="@drawable/radio_selecter"-->
-<!--                    android:button="@drawable/null_radio_button"-->
-<!--                    android:elevation="4dp"-->
-<!--                    android:gravity="center"-->
-<!--                    android:textColor="@drawable/radio_text_selector"-->
-<!--                    android:text="week" />-->
-
-<!--                <RadioButton-->
-<!--                    android:id="@+id/radio_month"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginHorizontal="10dp"-->
-<!--                    android:paddingHorizontal="12dp"-->
-<!--                    android:background="@drawable/radio_selecter"-->
-<!--                    android:button="@drawable/null_radio_button"-->
-<!--                    android:elevation="4dp"-->
-<!--                    android:gravity="center"-->
-<!--                    android:textColor="@drawable/radio_text_selector"-->
-<!--                    android:text="month" />-->
-<!--            </RadioGroup>-->
 
             <TextView
                 android:id="@+id/tv_today"
@@ -133,16 +99,114 @@
                     app:cv_outDateStyle="none"
                     app:cv_scrollMode="continuous" />
 
-                <!--            <FrameLayout-->
-                <!--                android:id="@+id/flFragment"-->
-                <!--                android:layout_width="match_parent"-->
-                <!--                android:layout_height="0dp"-->
-                <!--                app:layout_constraintBottom_toBottomOf="parent"-->
-                <!--                app:layout_constraintTop_toBottomOf="@+id/tv_month"-->
-                <!--                />-->
-
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+<!--    <com.owl93.dpb.CircularProgressView-->
+<!--        android:id="@+id/progress"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:strokeWidth="15dp"-->
+<!--        app:progress="80"-->
+<!--        app:trackWidth="15dp"-->
+<!--        app:trackColor="@color/gray_001"-->
+<!--        app:progressAnimationDuration="2"-->
+<!--        app:gradientStartColor="@color/red"-->
+<!--        app:gradientCenterColor="@color/purple_800"-->
+<!--        app:gradientEndColor="@color/blue"-->
+<!--        app:strokeGradientStyle="linear"-->
+<!--        app:textEnabled="true"-->
+<!--        app:textColor="@color/black"-->
+<!--        app:textFormat="integer"-->
+<!--        app:strokeGradient_linearAngle="0"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/textView3"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:text="Category Condo"-->
+<!--        android:textColor="#000000"-->
+<!--        android:textSize="20dp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/progress" />-->
+
+
+    <TextView
+        android:id="@+id/tv_category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Category Condo"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>
+
+    <TableLayout
+        android:id="@+id/table_heading_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_category">
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_column="0"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="2"
+                    android:gravity="center|left"
+                    android:text="Name"
+                    android:textSize="13dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_column="1"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:textSize="13dp"
+                    android:gravity="center"
+                    android:text="Busy"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_column="0"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:textColor="@color/blue"
+                    android:textSize="13dp"
+                    android:gravity="center"
+                    android:text="Available"
+                    android:textAlignment="center" />
+
+            </TableRow>
+        </TableLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/table_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/table_heading_layout" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
