--- a/app/src/main/res/drawable/backgrournd_buttongray_border.xml
+++ b/app/src/main/res/drawable/backgrournd_buttongray_border.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/>
-    <corners android:radius="999dp"/>
+
+    <solid android:color="@color/gray_001"/>
+    <corners android:radius="10dp"/>
 </shape>
